--- a/package/default/data/ui/views/mispgetioc.xml
+++ b/package/default/data/ui/views/mispgetioc.xml
@@ -21,6 +21,10 @@
     <set token="param_keep_related"></set>
     <set token="param_limit"></set>
     <set token="param_page"></set>
+    <set token="param_include_decay_score"></set>
+    <set token="param_decaying_model"></set>
+    <set token="param_exclude_decayed"></set>
+    <set token="param_decay_score_threshold"></set>
   </init>
   <label>MISP custom command mispgetioc</label>
   <fieldset submitButton="true" autoRun="false">
@@ -102,7 +106,6 @@
         </condition>
       </change>
     </input>
-
     <input type="radio" token="add_description" searchWhenChanged="true">
       <label>add_description</label>
       <change>
@@ -254,6 +257,48 @@
         </condition>
       </change>
     </input>
+    <input type="radio" token="include_decay_score" searchWhenChanged="true">
+      <label>include_decay_score</label>
+      <change>
+        <condition match="$value$=&quot;true&quot;">
+          <set token="param_include_decay_score">include_decay_score="$include_decay_score$"</set>
+        </condition>
+        <condition match="$value$=&quot;false&quot;">
+          <set token="param_include_decay_score">include_decay_score="$include_decay_score$"</set>
+        </condition>
+      </change>
+      <choice value="true">True</choice>
+      <choice value="false">False</choice>
+    </input>
+    <input type="text" token="decaying_model" searchWhenChanged="true">
+      <label>decaying_model</label>
+      <change>
+        <condition>
+          <set token="param_decaying_model">decaying_model="$decaying_model$"</set>
+        </condition>
+      </change>
+    </input>
+    <input type="radio" token="exclude_decayed" searchWhenChanged="true">
+      <label>exclude_decayed</label>
+      <change>
+        <condition match="$value$=&quot;true&quot;">
+          <set token="param_exclude_decayed">exclude_decayed="$exclude_decayed$"</set>
+        </condition>
+        <condition match="$value$=&quot;false&quot;">
+          <set token="param_exclude_decayed">exclude_decayed="$exclude_decayed$"</set>
+        </condition>
+      </change>
+      <choice value="true">True</choice>
+      <choice value="false">False</choice>
+    </input>
+    <input type="text" token="decay_score_threshold" searchWhenChanged="true">
+      <label>decay_score_threshold</label>
+      <change>
+        <condition>
+          <set token="param_decay_score_threshold">decay_score_threshold="$decay_score_threshold$"</set>
+        </condition>
+      </change>
+    </input>
     <input type="text" token="limit" searchWhenChanged="true">
       <label>limit</label>
       <change>
@@ -385,6 +430,26 @@
             <td>warning_list=1|y|Y|t|true|True|0|n|N|f|false|False </td>
             <td>Boolean to filter out well known values.</td>
         </tr>
+        <tr>
+            <td>include_decay_score</td>
+            <td>include_decay_score=1|y|Y|t|true|True|0|n|N|f|false|False </td>
+            <td>Boolean to return decay sores.</td>
+        </tr>
+        <tr>
+            <td>decaying_model</td>
+            <td>include_decay_score=int </td>
+            <td>ID of the decaying model to select specific model.</td>
+        </tr>
+        <tr>
+            <td>exclude_decayed</td>
+            <td>exclude_decayed=1|y|Y|t|true|True|0|n|N|f|false|False </td>
+            <td>Boolean to exclude decayed attributes.</td>
+        </tr>
+        <tr>
+            <td>decay_score_threshold</td>
+            <td>decay_score_threshold=int </td>
+            <td>Define the minimum sore to override on-the-fly the threshold of the decaying model.</td>
+        </tr>
       </table>
     </html>
     </panel>
@@ -393,13 +458,9 @@
     <panel>
       <title>Custom command mispgetioc</title>
       <table>
-        <title>| mispgetioc misp_instance=$misp_instance$ $param_limit$ $param_page$ 
-         $param_json_request$ $param_eventid$ $param_last$ $param_date$
-         $param_category$ $param_type$ $param_output$ $param_add_description$ $param_deleted$ $param_expand_object$ $param_geteventtag$ $param_getorg$ $param_getuuid$ $param_tags$ $param_not_tags$ $param_to_ids$ $param_warning_list$  $param_pipesplit$</title>
+        <title>| mispgetioc misp_instance=$misp_instance$ $param_json_request$ $param_eventid$ $param_last$ $param_date$ $param_category$ $param_type$ $param_output$ $param_add_description$ $param_deleted$ $param_expand_object$ $param_geteventtag$ $param_getorg$ $param_getuuid$ $param_tags$ $param_not_tags$ $param_to_ids$ $param_warning_list$ $param_limit$ $param_page$ $param_pipesplit$ $param_include_decay_score$ $param_decaying_model$ $param_exclude_decayed$ $param_decay_score_threshold$</title>
         <search>
-          <query>| mispgetioc misp_instance=$misp_instance$ $param_limit$ $param_page$ 
-         $param_json_request$ $param_eventid$ $param_last$ $param_date$
-         $param_category$ $param_type$ $param_output$ $param_add_description$ $param_deleted$ $param_expand_object$ $param_geteventtag$ $param_getorg$ $param_getuuid$ $param_tags$ $param_not_tags$ $param_to_ids$ $param_warning_list$  $param_pipesplit$ </query>
+          <query>| mispgetioc misp_instance=$misp_instance$ $param_json_request$ $param_eventid$ $param_last$ $param_date$ $param_category$ $param_type$ $param_output$ $param_add_description$ $param_deleted$ $param_expand_object$ $param_geteventtag$ $param_getorg$ $param_getuuid$ $param_tags$ $param_not_tags$ $param_to_ids$ $param_warning_list$ $param_limit$ $param_page$ $param_pipesplit$ $param_include_decay_score$ $param_decaying_model$ $param_exclude_decayed$ $param_decay_score_threshold$</query>
           <earliest>0</earliest>
           <latest></latest>
           <sampleRatio>1</sampleRatio>
